packages/infra/k8s-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /car
            pathType: Prefix
            backend:
              service:
                name: car-service
                port:
                  number: 3000
          - path: /middleware
            pathType: Prefix
            backend:
              service:
                name: middleware-service
                port:
                  number: 3000
          - path: /otp-authenticator
            pathType: Prefix
            backend:
              service:
                name: otp-authenticator-service
                port:
                  number: 3000
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3000
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /emergency
            pathType: Prefix
            backend:
              service:
                name: emergency-service
                port:
                  number: 3000
